<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/five_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifteen_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <View
        android:id="@+id/dummy_view_frag_user_profile"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:background="@drawable/profile_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_img_app_bar_frag_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginStart="@dimen/sixteen"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_photo_frag_user_profile"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintBottom_toBottomOf="@+id/fifteen_percent_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/five_percent_guideline" />

    <TextView
        android:id="@+id/user_name_frag_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_three_sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/user_photo_frag_user_profile" />

    <TextView
        android:id="@+id/email_frag_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintTop_toBottomOf="@+id/user_name_frag_user_profile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifteen_vertical_guideline_frag_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eighty_five_vertical_guideline_frag_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirty_one_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/thirty_nine_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.cardview.widget.CardView
        android:id="@+id/back_card_frag_user_profile"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/fifty"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/fifty"
        app:cardElevation="@dimen/five"
        app:layout_constraintBottom_toBottomOf="@+id/thirty_nine_percent_guideline"
        app:layout_constraintEnd_toEndOf="@+id/eighty_five_vertical_guideline_frag_user_profile"
        app:layout_constraintStart_toStartOf="@+id/fifteen_vertical_guideline_frag_user_profile"
        app:layout_constraintTop_toBottomOf="@+id/thirty_one_percent_guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_btn_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/ten"
            android:paddingEnd="@dimen/ten">

            <!--dynamic Imageview width and height - 5%-->
            <ImageView
                android:id="@+id/back_img_frag_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_white_bg"
                android:padding="@dimen/five"
                android:src="@drawable/back_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/back_to_home"
                android:textColor="@color/white"
                android:textSize="@dimen/fourteen_sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/acc_info_txt_frag_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/twenty"
        android:paddingTop="@dimen/thirty"
        android:text="@string/account_info"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_three_sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/back_card_frag_user_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/twenty"
        android:paddingTop="@dimen/thirty"
        android:paddingEnd="@dimen/twenty"
        android:paddingBottom="@dimen/twenty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_info_txt_frag_user_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/name_icon_frag_user_profile"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/thirty"
                android:src="@drawable/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_name_txt_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/name_icon_frag_user_profile"
                app:layout_constraintTop_toTopOf="@+id/name_icon_frag_user_profile" />

            <TextView
                android:id="@+id/detail_name_tv_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/name_static"
                android:textColor="@color/primary_txt_clr"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/name_icon_frag_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/detail_name_txt_frag_user_profile" />

            <View
                android:id="@+id/view_line_name_frag_user_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/separator_clr"
                app:layout_constraintTop_toBottomOf="@+id/detail_name_tv_frag_user_profile" />

            <ImageView
                android:id="@+id/mobile_icon_frag_user_profile"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty"
                android:src="@drawable/mobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_line_name_frag_user_profile" />

            <TextView
                android:id="@+id/detail_mobile_txt_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/mobile_icon_frag_user_profile"
                app:layout_constraintTop_toTopOf="@+id/mobile_icon_frag_user_profile" />

            <TextView
                android:id="@+id/detail_mobile_tv_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/mobile_no_static"
                android:textColor="@color/primary_txt_clr"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/mobile_icon_frag_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/detail_mobile_txt_frag_user_profile" />

            <View
                android:id="@+id/view_line_mobile_frag_user_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/separator_clr"
                app:layout_constraintTop_toBottomOf="@+id/detail_mobile_tv_frag_user_profile" />

            <ImageView
                android:id="@+id/email_icon_frag_user_profile"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty"
                android:src="@drawable/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_line_mobile_frag_user_profile" />

            <TextView
                android:id="@+id/detail_email_txt_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/email_icon_frag_user_profile"
                app:layout_constraintTop_toTopOf="@+id/email_icon_frag_user_profile" />

            <TextView
                android:id="@+id/detail_email_tv_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/email_static"
                android:textColor="@color/primary_txt_clr"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/email_icon_frag_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/detail_email_txt_frag_user_profile" />

            <View
                android:id="@+id/view_line_email_frag_user_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/separator_clr"
                app:layout_constraintTop_toBottomOf="@+id/detail_email_tv_frag_user_profile" />

            <ImageView
                android:id="@+id/address_icon_frag_user_profile"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty"
                android:src="@drawable/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_line_email_frag_user_profile" />

            <TextView
                android:id="@+id/detail_address_txt_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/address_icon_frag_user_profile"
                app:layout_constraintTop_toTopOf="@+id/address_icon_frag_user_profile" />

            <TextView
                android:id="@+id/detail_address_tv_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/address_static"
                android:textColor="@color/primary_txt_clr"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/address_icon_frag_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/detail_address_txt_frag_user_profile" />

            <View
                android:id="@+id/view_line_address_frag_user_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/separator_clr"
                app:layout_constraintTop_toBottomOf="@+id/detail_address_tv_frag_user_profile" />

            <ImageView
                android:id="@+id/dob_icon_frag_user_profile"
                android:layout_width="@dimen/thirty"
                android:layout_height="@dimen/thirty"
                android:layout_marginTop="@dimen/twenty"
                android:src="@drawable/dob"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_line_address_frag_user_profile" />

            <TextView
                android:id="@+id/detail_dob_txt_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dob_icon_frag_user_profile"
                app:layout_constraintTop_toTopOf="@+id/dob_icon_frag_user_profile" />

            <TextView
                android:id="@+id/detail_dob_tv_frag_user_profile"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/five"
                android:text="12-05-1990"
                android:textColor="@color/primary_txt_clr"
                android:textSize="@dimen/twelve_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dob_icon_frag_user_profile"
                app:layout_constraintTop_toBottomOf="@+id/detail_dob_txt_frag_user_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/separator_clr"
                app:layout_constraintTop_toBottomOf="@+id/detail_dob_tv_frag_user_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>